--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="siteApp">
   <head>
     <title>HSLU WebTec Testat Site</title>
 
@@ -15,56 +15,26 @@
   <body>
 	<div class="container">
       <div class="header clearfix">
-        <nav>
+        <nav ng-controller="NavigationController as navigation">
           <ul class="nav nav-pills float-xs-right">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" ng-class="{active: navigation.isActive('/')}" href="#/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Canvas</a>
+              <a class="nav-link" ng-class="{active: navigation.isActive('/canvas')}" href="#/canvas">Canvas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Formular</a>
+              <a class="nav-link" ng-class="{active: navigation.isActive('/form')}" href="#/form">Formular</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Texte und Bilder</a>
+              <a class="nav-link" ng-class="{active: navigation.isActive('/images')}" href="#/images">Texte und Bilder</a>
             </li>
           </ul>
         </nav>
         <h3 class="text-muted">HSLU WebTec</h3>
       </div>
 
-      <div class="jumbotron">
-        <h1 class="display-3">Testat Aufgabe</h1>
-        <p class="lead">Diese Webseite ist Teil der Testat Aufgabe fuer das HSLU WebTec Modul.</p>
-        <p><a class="btn btn-lg btn-success" href="https://github.com/timofurrer/hslu-webtec-testat" target="_blank" role="button">Zum Source</a></p>
-      </div>
-
-      <div class="row contents">
-        <div class="col-lg-6">
-          <h4>Aufgabe</h4>
-          <p>Die Aufgabenstellung fuer das HSLU WebTec Testat:
-          <blockquote class="blockquote">
-            <p>Es ist eine WebSite zu erstellen, die den untenstehenden Ansprüchen genügen muss. Der Inhalt dieser WebSite ist egal.
-            Diese WebSite ist schlussendlich auch online verfügbar zu machen damit ich sie kontrollieren kann.</p>
-            <footer class="blockquote-footer"><cite title="Source Title">Aus dem <a href="https://elearning.hslu.ch/ilias/goto.php?target=file_3163817_download&client_id=hslu">original Auftrag</a></cite></footer>
-          </blockquote></p>
-
-          <h4>Home</h4>
-          <p>Auf der Startseite sind allgemeine Informationen ueber diese Testat Webseite zu finden.</p>
-        </div>
-
-        <div class="col-lg-6">
-          <h4>Canvas</h4>
-          <p>Die Canvas-Seite beinhaltet eine kleine Demonstration, wie man ein Canvas-Element vom Server laden und auf der Webseite per Canvas Rendern kann.</p>
-
-          <h4>Formular</h4>
-          <p>Auf der Formular-Seite befindet sich ein Kontaktformular mit Clientseitiger Eingabepruefung. Die Metainformationen fuer das Formular werden vom Server geladen.</p>
-
-          <h4>Texte und Bilder</h4>
-          <p>Die Texte und Bilder Seite enthaelt vom Server geladene Texte und Bilder.</p>
-        </div>
-      </div>
+      <div ng-view></div>
 
       <footer class="footer">
         <p>&copy; Published under MIT. A <a href="https://tuxtimo.me" target="_blank">Timo Furrer</a> Project.</p>
@@ -72,8 +42,10 @@
 
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+    <script src="node_modules/angular/angular.js"></script>
+    <script src="node_modules/angular-route/angular-route.js"></script>
+    <script src="assets/js/apps/site/module.js"></script>
+    <script src="assets/js/apps/site/config.js"></script>
+    <script src="assets/js/apps/site/controllers/NavigationController.js"></script>
   </body>
 </html>
