Add canvas page

--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
     <script src="assets/js/apps/site/module.js"></script>
     <script src="assets/js/apps/site/config.js"></script>
     <script src="assets/js/apps/site/controllers/NavigationController.js"></script>
+    <script src="assets/js/apps/site/directives/scratchboard.js"></script>
   </body>
 </html>
