--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     <script src="assets/js/apps/site/module.js"></script>
     <script src="assets/js/apps/site/config.js"></script>
     <script src="assets/js/apps/site/controllers/NavigationController.js"></script>
+    <script src="assets/js/apps/site/controllers/FormController.js"></script>
     <script src="assets/js/apps/site/directives/scratchboard.js"></script>
+    <script src="assets/js/apps/site/directives/weirdimage.js"></script>
   </body>
 </html>
