Load some stuff from server

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <script src="assets/js/apps/site/config.js"></script>
     <script src="assets/js/apps/site/controllers/NavigationController.js"></script>
     <script src="assets/js/apps/site/controllers/StyleController.js"></script>
+    <script src="assets/js/apps/site/controllers/QuoteController.js"></script>
     <script src="assets/js/apps/site/controllers/FormController.js"></script>
     <script src="assets/js/apps/site/directives/scratchboard.js"></script>
     <script src="assets/js/apps/site/directives/weirdimage.js"></script>
